# MTR

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
conf/: config.yaml
conf/model/fttrans/: cutmix.yaml  hidden_mix.yaml  mask_token.yaml  mixup.yaml  scarf.yaml  wo-da.yaml
data/: __init__.py  tabular_datamodule.py
data/datasets/: __init__.py  adult.py  ca_housing.py  openml.py  tabular_dataframe.py  utils.py
model/: __init__.py  hidden_mix_alpha.py  mask_token.py  mixup.py
model/core/: __init__.py  fttrans.py  transformer.py
runner/: __init__.py  base.py  self_sl.py  supervised.py
script/: kill_process.py
script/self_sl/: all.sh  hidden_mix.sh  mask_token.sh  mixup.sh  scarf.sh  wo-da.sh
script/sl/: all.sh  cutmix.sh  hidden_mix.sh  hidden_mix_wo_la.sh  mask_token.sh  mixup.sh  run_all.py  scarf.sh  wo-da.sh
trainer/: __init__.py  base.py  utils.py
trainer/self_supervised/: __init__.py  base.py  fttrans_w_hidden_mix.py  fttrans_w_mask_token.py  fttrans_w_mixup.py  fttrans_w_scarf.py
trainer/supervised/: __init__.py  base.py  base_da.py  fttrans.py  fttrans_w_cutmix.py  fttrans_w_hidden_mix.py  fttrans_w_mask_token.py  fttrans_w_mixup.py  fttrans_w_scarf.py
