[tool.poetry]
name = "mtr"
version = "1.0.0"
description = ""
authors = ["anonymous"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"
rtdl = "^0.0.13"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
hydra-core = "^1.3.0"
tensorboard = "^2.11.0"
timm = "^0.6.12"
ipykernel = "^6.19.4"
matplotlib = "^3.6.2"
xlrd = "^2.0.1"
openml = "^0.13.0"
tabulate = "^0.9.0"
seaborn = "^0.12.2"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
